# ClapLang

./: CMakeLists.txt  LICENSE  README.md  SamleScript.clap
src/: Common.h  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  Scanner.cpp  Scanner.h  VM.cpp  VM.h  Value.h  main.cpp
